az-cli/aks/deployments/ingress/linux-and-windows/windows-iis-web-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: win-web-srv
  labels:
    app: linux-ng-web-srv
spec:
  replicas: 1
  template:
    metadata:
      name: win-web-srv
      labels:
        app: linux-ng-web-srv
    spec:
      nodeSelector:
        "kubernetes.io/os": windows
      containers:
      - name: sample
        image: mcr.microsoft.com/dotnet/framework/samples:aspnetapp
        volumeMounts:
        - name: windows-default-file
          mountPath: /inetpub/wwwroot/
        resources:
          limits:
            cpu: 1
            memory: 800M
          requests:
            cpu: .1
            memory: 300M
        ports:
        - containerPort: 80
      volumes:
      - name: windows-default-file
        configMap:
         name: windows-default-configmap 
  selector:
    matchLabels:
      app: linux-ng-web-srv
