az-cli/aks/deployments/ingress/linux-and-windows/expose-linux-ng-web-srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linux-ng-web-srv
  name: all-as-one
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: linux-ng-web-srv
