az-cli/aks/deployments/ingress/linux-and-windows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: all-as-one
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
